完成数风接口扩展

--- a/web/app/signin/page.module.css
+++ b/web/app/signin/page.module.css
@@ -5,3 +5,7 @@
 .googleIcon {
   background: center/contain url('./assets/google.svg');
 }
+
+.shufengIcon {
+  background: center/contain url('./assets/shufeng.svg');
+}
